Added monitor only workflow tasks + option to add notes in target failure notification email

--- a/JosephM.Xrm.WorkflowScheduler.WebResources/HTML/jmcg_ws_configuration.html
+++ b/JosephM.Xrm.WorkflowScheduler.WebResources/HTML/jmcg_ws_configuration.html
@@ -71,6 +71,13 @@
                 This is intended to be used where the view defines a set of records which require actioning
             </td>
         </tr>
+        <tr>
+            <td>Monitor Only</td>
+            <td>
+                This type only monitors for instances of a workflow failing and does not run any scheduled process itself.<br /><br />
+                It is intended to be used for monitoring a workflow which runs on create or change of a record.
+            </td>
+        </tr>
     </table>
 </body>
 </html>
